--- a/src/app/classroom/classroom.page.html
+++ b/src/app/classroom/classroom.page.html
@@ -57,7 +57,7 @@
                   <ion-item
                     [button]="true"
                     [detail]="false"
-                    (click)="editar(classroom.clas_id)"> <!-- Agregamos la opción de Modificar -->
+                    [routerLink]="['modificar', classroom.clas_id]"> <!-- Agregamos la opción de Modificar -->
                     <ion-icon name="create"></ion-icon>
                     Modificar
                   </ion-item>
