--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -1,14 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
 <!-- Boton para regresar -->    
-    <ion-buttons slot="start">
+      <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Acciones disponibles</ion-title>
-  </ion-toolbar>
+  </ion-toolbar> 
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Acciones disponibles</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
   <ion-grid>
     <!-- Crear una fila por cada elemento --> 
@@ -23,7 +28,6 @@
       <ion-col size = "6" class="ion-justify-content-end" [routerLink]="['/lista', grupoid]">
         <ion-icon name="arrow-forward-outline"></ion-icon>
       </ion-col>
-    <!-- Cierro filas y grid -->
     </ion-row>
   </ion-grid>
   
@@ -40,7 +44,6 @@
       <ion-col size = "6" class="ion-justify-content-end">
         <ion-icon name="arrow-forward-outline"></ion-icon>
       </ion-col>
-    <!-- Cierro filas y grid -->
     </ion-row>
   </ion-grid>
 
@@ -57,7 +60,6 @@
       <ion-col size = "6" class="ion-justify-content-end">
         <ion-icon name="arrow-forward-outline"></ion-icon>
       </ion-col>
-    <!-- Cierro filas y grid -->
     </ion-row>
   </ion-grid>
 
