--- a/src/app/newextracurricular/newextracurricular.page.html
+++ b/src/app/newextracurricular/newextracurricular.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="personalizado">
-      <ion-title class="ion-text-center">Nuevo Evento</ion-title>
+      <ion-title class="ion-text-center">Modificar Evento</ion-title>
   </ion-toolbar>
 </ion-header>
 
