--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
   <ion-grid>
     <ion-row *ngFor="let major of majors">
       <ion-col size="1">
@@ -59,6 +59,10 @@
         </ion-button>
       </ion-col> -->
 
+    
+
+
+
     </ion-row>
   </ion-grid>
 
@@ -77,7 +81,7 @@
     </ion-fab-list>
   </ion-fab>
   -->
-
+  <app-paginacion [total]="totalMajors" (click)="pagina($event)"></app-paginacion>
 
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
@@ -158,6 +162,6 @@
 
 -->
 
-<app-paginacion [total]="totalMajors" (click)="pagina($event)"></app-paginacion>
+
 
 </ion-content>
