--- a/src/app/menu1/menu1.page.html
+++ b/src/app/menu1/menu1.page.html
@@ -40,7 +40,7 @@
     <ion-row class="ion-justify-content-center">
       <ion-col>
         <!-- Botón para la página 'question' -->
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/question']">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
           <ion-icon size="large" src="assets/icon/pregunta.svg" size="large"></ion-icon>
         </ion-button>
         <ion-label>Preguntas</ion-label>
