--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
 <!-- Boton para regresar -->    
-    <ion-buttons slot="start">
+      <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Tus Grupos</ion-title>
@@ -24,6 +24,7 @@
           <h3>Ubicación: {{grupo.classroom}} </h3>
         </ion-label>
       </ion-col>
+
       <!-- Crear columna para boton eliminar
       <ion-col size="auto">
         <ion-button color="danger" (click)="alertEliminar(grupo.gro_id)">
@@ -57,7 +58,7 @@
                   <ion-item
                     [button]="true"
                     [detail]="false"
-                    [routerLink]="['modificar', grupo.gro_id]"> <!-- Agregamos la opción de Modificar -->
+                    (click)="editar(grupo.gro_id)">  <!-- Agregamos la opción de Modificar -->
                     <ion-icon name="create"></ion-icon>
                     Modificar
                   </ion-item>
@@ -70,6 +71,7 @@
     <!-- Cierro filas y grid -->
     </ion-row>
   </ion-grid>
+
 </ion-content>
 
 <!-- Boton flotante para acciones -->
@@ -86,11 +88,11 @@
     </ion-fab-button >
     <!-- Crear grupo -->
     <ion-fab-button (click)="new()">
-      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-icon name="add"></ion-icon>
     </ion-fab-button>
     <!-- Tabla classroom -->
     <ion-fab-button [routerLink]="['/classroom']">
-      <ion-icon name="business-outline"></ion-icon>
+      <ion-icon name="business"></ion-icon>
     </ion-fab-button>
   </ion-fab-list>
 </ion-fab>
