--- a/src/app/extracurricular/extracurricular.page.scss
+++ b/src/app/extracurricular/extracurricular.page.scss
@@ -36,14 +36,14 @@
 
 .info-label {
     font-weight: bold;
-    border: 1px solid #ccc;
-    padding: 8px;
+    padding: 2px;
     border-radius: 5px;
+    color: var(--ion-color-text1-shade);
 }
 
 .info-value {
     margin: 0;
-    font-size: 15px;
+    font-size: 18px;
     line-height: 1.4;
     padding: 5px 0;
 }
