Intento de paginacion

--- a/src/app/components/paginacion/paginacion.component.scss
+++ b/src/app/components/paginacion/paginacion.component.scss
@@ -1,5 +1,5 @@
 .swiper-container {
-    background-color: transparent;
+    background-color: var(--ion-color-primary);
     color: white;
     border: none;
     margin: 0 5px;
