--- a/src/app/notextracurricular/notextracurricular.page.html
+++ b/src/app/notextracurricular/notextracurricular.page.html
@@ -94,6 +94,6 @@
     </ion-fab-list>
   </ion-fab>
 
-  <app-paginacion [total]="totalEventos" (click)="pagina($event)"></app-paginacion>
+  <app-paginacion [total]="100" (click)="pagina($event)"></app-paginacion>
 
 </ion-content>
