--- a/src/app/classroom/classroom.page.html
+++ b/src/app/classroom/classroom.page.html
@@ -9,6 +9,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
 
   <ion-grid>
     <!-- Crear una fila por cada elemento --> 
@@ -72,6 +73,8 @@
     </ion-row>
   </ion-grid>
 
+  <app-paginacion [total]="totalClassrooms" (click)="pagina($event)"></app-paginacion>
+  
 </ion-content>
 
 <!-- Boton flotante de agregar -->
