--- a/src/app/grade/grade.page.html
+++ b/src/app/grade/grade.page.html
@@ -10,6 +10,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
+
   <ion-accordion-group [multiple]="true" expand="inset">
     <ion-accordion *ngFor="let grades of grade">
       
@@ -78,5 +81,7 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+
+  <app-paginacion [total]="totalCalificaciones" (click)="pagina($event)"></app-paginacion>
 
 </ion-content>
