--- a/src/app/notextracurricular/notextracurricular.page.html
+++ b/src/app/notextracurricular/notextracurricular.page.html
@@ -10,6 +10,8 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
+
   <ion-grid>
     <ion-row *ngFor="let extras of extra">
       <ion-col size="6">
@@ -91,5 +93,7 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+
+  <app-paginacion [total]="totalEventos" (click)="pagina($event)"></app-paginacion>
 
 </ion-content>
