--- a/src/app/question/question.page.scss
+++ b/src/app/question/question.page.scss
@@ -15,6 +15,13 @@ ion-card {
     transform: scale(1.05);
     box-shadow: var(--ion-color-tertiary);
   }
+  .botonM{
+    position: fixed; /* Establece la posición fija para el botón */
+    top: 30px; /* Ajusta la distancia desde la parte inferior según tus necesidades */
+    right: 10px; /* Ajusta la distancia desde la derecha según tus necesidades */
+    z-index: 999; /* Ajusta el índice z si hay elementos superpuestos */
+  }
+
   
   /* Estilos para el contenido de la tarjeta */
   ion-card-content {
@@ -23,32 +30,10 @@ ion-card {
     flex-grow: 0;
     
   }
-  .ic{
-    display: flex;
-    flex-direction: row;
-  }
-  .ictittle{
-    font-size: 14px;
-    bottom: -30px;
-  }
-  .icdesc{
-    font-size: 12px;
-    bottom: -25px;
-  }
-  .icnameteacher{
-    position: relative;
-    font-size: 12px;
-    bottom: -17px;
-  }
-  .icfecha{
-    position: relative;
-    font-size: 12px;
-    bottom: -10px;
-    
-  }
+  
   .imagecard{
-    width: 100px; 
-    height: 100px;
+    width: 50px; 
+    height: 50px;
   }
 
   .bottom-right {
@@ -56,12 +41,10 @@ ion-card {
     left: 150px;
     margin: 10;
     font-size: 10px;
-    top: -22px;
+    top: -25px;
     color: var(--ion-color-secondary-tint); 
     width: 75px; 
     height: 5px
-    
-    
   }
   .flecha{
     position: relative;
@@ -70,6 +53,58 @@ ion-card {
     bottom:-2px;
   }
   
+.delete{
+  position: relative;
+    left: 150px;
+    margin: 10;
+    font-size: 10px;
+    top: -45px;
+    color: var(--ion-color-secondary-tint); 
+    width: 75px; 
+    height: 5px
+}
+
+.update{
+  position: relative;
+    left: 150px;
+    margin: 10;
+    font-size: 10px;
+    top: -65px;
+    color: var(--ion-color-secondary-tint); 
+    width: 75px; 
+    height: 5px
+}
+
+.settings{
+    position: relative;
+    left: 190px;
+    margin: 10;
+    font-size: 10px;
+    bottom: 160px;
+    color: var(--ion-color-secondary-tint); 
+    width: 75px; 
+    height: 5px
+}
+.settings2{
+  position: relative;
+  left: 500px;
+  margin: 10;
+  font-size: 10px;
+  bottom: -50px;
+  color: var(--ion-color-secondary-tint); 
+  width: 75px; 
+  height: 5px
+}
+
+ion-footer {
+  position: fixed; /* Asegura que el footer se mantiene en la parte inferior de la página */
+  bottom: 0; /* Coloca el footer en la parte inferior */
+  width: 100%; /*  el ancho que desees */
+  background-color: #ffffff00; /* Cambia el color de fondo según tus preferencias */
+  border-top: 1px solid #ccc; /* Agrega un borde superior para separar del contenido */
+  padding: 10px; /* Añade relleno según sea necesario */
+}
+
   /* Estilos para los encabezados de las tarjetas */
   ion-card-header {
     background-color: var(--ion-color-tertiary);
@@ -108,5 +143,5 @@ ion-card-title {
     background-color: #87d361;
   }*/
   
-  
+
   
