--- a/src/app/lista-asistencia/lista-asistencia.page.html
+++ b/src/app/lista-asistencia/lista-asistencia.page.html
@@ -9,17 +9,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
-
-
-    <ion-list>
-      <ion-item button *ngFor="let lista of listas" [routerLink]="['/detalle-asistencia',lista.list_id]">
-        <ion-avatar aria-hidden="true" slot="start">
-          <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-        </ion-avatar>
-        <ion-label>{{lista.list_fkperson}}</ion-label>
-      </ion-item>
-    </ion-list>
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
+  <ion-list>
+    <ion-item button *ngFor="let lista of listas" [routerLink]="['/detalle-asistencia',lista.list_id]">
+      <ion-avatar aria-hidden="true" slot="start">
+        <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+      </ion-avatar>
+      <ion-label>{{lista.person}}</ion-label>
+    </ion-item>
+  </ion-list>
+  <app-paginacion [total]="totalAlumnos" (click)="pagina($event)"></app-paginacion>
 
 
 </ion-content>
