--- a/src/global.scss
+++ b/src/global.scss
@@ -25,4 +25,5 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-
+// Importacion de css de swiper
+@import "../node_modules/swiper/swiper-bundle.min.css";
