--- a/src/app/codigos/codigos.page.html
+++ b/src/app/codigos/codigos.page.html
@@ -22,6 +22,10 @@
         </ion-label>
       </ion-item>
       <ion-item-options slot="end">
+        <ion-item-option color="primary" >
+          <ion-icon name="color-wand-outline" size="large"></ion-icon>
+        </ion-item-option>
+
         <ion-item-option color="tertiary" (click)="showDataAlert(codigo)">
           <ion-icon slot="icon-only" name="share"></ion-icon>
         </ion-item-option>
@@ -30,16 +34,14 @@
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-
   </ion-list>
 
-    <!-- Boton generar codigo  -->
-<ion-fab slot="fixed" vertical="bottom" horizontal="end">
-  <ion-fab-button (click)="new()">
-  <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
+  <!-- Boton generar codigo  -->
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button (click)="new()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
-<!-- [routerLink]="['/lista-codigos']" -->
-
-
+  <!-- [routerLink]="['/lista-codigos']" -->
+</ion-content>
