--- a/src/app/carrusel/carrusel.page.html
+++ b/src/app/carrusel/carrusel.page.html
@@ -1,8 +1,6 @@
-<ion-header [translucent]="true">
 
-</ion-header>
 
-<ion-content class="centerGrid">
+<ion-content class="">
 
   <app-banner [slides]="slides"></app-banner>
   <div class="wrapper">
