--- a/src/app/detalle-asistencia/detalle-asistencia.page.html
+++ b/src/app/detalle-asistencia/detalle-asistencia.page.html
@@ -16,7 +16,7 @@
          
         <ion-label class="ion-text-wrap">
           <h2>{{asistencia.att_commit}}</h2>
-          <!-- <!-- <h3> {{asistencia.att_fkcode}} </h3> -->
+          <!--  <h3> {{asistencia.att_fkcode}} </h3> -->
           <p>{{asistencia.att_time}}</p>
           <!-- <p>{{asistencia.att_date | date:'y-MM-dd'}}</p>  -->
         </ion-label>
