--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,13 +3,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="content-centered">
-
-    <div class=" ion-align-items-center ">
-        
+    <div class="ion-align-items-center">
         <ion-grid [fixed]="true" size="pushXl">
             <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-thumbnail size="">
-                    <img alt="multicheck" src="assets/icon/LOGO.png" size="base"/>
+                    <img alt="multicheck" src="assets/icon/LOGO.png" size="base" />
                 </ion-thumbnail>
             </ion-row>
             <ion-row class="ion-justify-content-center ion-align-items-center">
@@ -29,13 +27,11 @@
             </ion-row>
         </ion-grid>
     </div>
-
 </ion-content>
 <ion-footer class="ion-no-border" [translucent]="true">
     <ion-toolbar>
         <ion-buttons slot="start">
-          <ion-button>Regresar</ion-button>
+            <ion-button routerLink="/">Regresar</ion-button>
         </ion-buttons>
-
-      </ion-toolbar>
+    </ion-toolbar>
 </ion-footer>
