--- a/src/app/carrusel/carrusel.page.html
+++ b/src/app/carrusel/carrusel.page.html
@@ -16,7 +16,7 @@
           <ion-button shape="round" fill="outline" routerLink="/login">Inicar</ion-button>
         </ion-col>
         <ion-col size="8">
-          <ion-button shape="round" fill="outline" routerLink="/registro">Registrar</ion-button>
+          <ion-button shape="round" fill="outline" routerLink="/selecion-ma">Registrar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
