--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,12 +16,13 @@
             </ion-row>
             <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-col size="9">
-                    <ion-input label="Usuario" label-placement="floating" fill="outline"
-                        placeholder="Usuario"></ion-input>
+                    <ion-input class="custom" type="Username" fill="solid" label="Username" labelPlacement="floating"
+                        ngModel></ion-input>
+
                 </ion-col>
                 <ion-col size="9">
-                    <ion-input label="Contraseña" label-placement="floating" fill="outline"
-                        placeholder="Contraseña"></ion-input>
+                    <ion-input class="custom" type="Contraseña" fill="solid" label="Contraseña"
+                        labelPlacement="floating" ngModel></ion-input>
                 </ion-col>
             </ion-row>
             <ion-row class="ion-justify-content-center ion-text-center">
