--- a/src/app/selecion-ma/selecion-ma.page.html
+++ b/src/app/selecion-ma/selecion-ma.page.html
@@ -13,12 +13,12 @@
 
       <b>Que tipo de Usuario eres?</b>
 
-      <ion-button class="ion-activatable ripple-parent custom-parent" [routerLink]="['/registro', 1]">
+      <ion-button class="ion-activatable ripple-parent custom-parent" [routerLink]="['/maestro-form']">
         Maestro
         <ion-ripple-effect></ion-ripple-effect>
       </ion-button>
 
-      <ion-button class="ion-activatable ripple-parent custom-parent2" [routerLink]="['/registro', 2]">
+      <ion-button class="ion-activatable ripple-parent custom-parent2" [routerLink]="['/alumno-form']">
         Alumno
         <ion-ripple-effect class="custom-ripple"></ion-ripple-effect>
       </ion-button>
