--- a/src/app/selecion-ma/selecion-ma.page.scss
+++ b/src/app/selecion-ma/selecion-ma.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-    --background: url("../../assets/maestroestudiante.svg");
+    --background: url("../../assets/maestroestudiante.png");
     --background-position: center;
     --background-clip: content-box;
     --background-size: contain;
