--- a/src/global.scss
+++ b/src/global.scss
@@ -27,3 +27,10 @@
 
 // Importacion de css de swiper
 @import "../node_modules/swiper/swiper-bundle.min.css";
+
+ion-input.custom.ios .input-bottom .helper-text,
+ion-input.custom.ios .input-bottom .counter,
+ion-input.custom.md .input-bottom .helper-text,
+ion-input.custom.md .input-bottom .counter {
+  color: var(--ion-color-primary);
+}
